<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        tools:context=".rate.RateActivity"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:title="@string/rate"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/where_watched"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        <RadioGroup
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/normal_text"
                    android:textColor="@color/normal_text"
                    android:text="@string/cinema"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/normal_text"
                    android:textColor="@color/normal_text"
                    android:text="@string/home"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/normal_text"
                    android:textColor="@color/normal_text"
                    android:text="@string/other"/>
        </RadioGroup>

        <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/when_watched"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/dateSelect"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start|center_vertical"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableStart="@drawable/ic_small_calendar"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:drawablePadding="16dp"
                style="?borderlessButtonStyle"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:text="--/--/----"
                android:background="@drawable/shape_select"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/opinion"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

        <EditText
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:minHeight="80dp"
                android:padding="6dp"
                android:gravity="start"
                android:textColor="@color/white"
                android:background="@drawable/shape_select"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btSend"
                android:layout_width="match_parent"
                android:background="@drawable/primary_button"
                android:foreground="?android:selectableItemBackground"
                style="?borderlessButtonStyle"
                android:textAllCaps="false"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/send"
                android:textColor="@color/white"
                android:layout_height="48dp"/>
    </LinearLayout>
</ScrollView>