<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail.DetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:title="@string/details"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="120dp"
                    app:riv_corner_radius="6dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_height="wrap_content"
                    android:id="@+id/posterImage"/>

            <TextView
                    android:id="@+id/originalTitle"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@+id/posterImage"
                    android:layout_marginStart="8dp"
                    android:maxLines="2"
                    android:textColor="@color/white"
                    android:ellipsize="end"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@+id/posterImage"
                    android:layout_below="@+id/originalTitle"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/normal_text"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/captionRating"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/overview"
                    android:layout_marginEnd="4dp"
                    android:layout_toEndOf="@+id/posterImage"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/users_rating"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/usersRating"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/overview"
                    android:layout_toEndOf="@+id/captionRating"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/normal_text"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/captionReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/captionRating"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/release_date"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/posterImage"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/captionRating"
                    android:layout_toEndOf="@+id/captionReleaseDate"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/normal_text"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

        <Button
                android:id="@+id/btRate"
                android:layout_width="match_parent"
                android:background="@drawable/primary_button"
                android:foreground="?android:selectableItemBackground"
                style="?borderlessButtonStyle"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:layout_height="48dp"/>
    </LinearLayout>
</ScrollView>